Bug 259965 - [WebXR] Fix compilation with MTLSHAREDEVENT_FOR_XR_FRAME_COMPLETION enabled
Summary: [WebXR] Fix compilation with MTLSHAREDEVENT_FOR_XR_FRAME_COMPLETION enabled
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebXR (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Dan Glastonbury
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-08 21:56 PDT by Dan Glastonbury
Modified: 2023-08-09 00:55 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dan Glastonbury 2023-08-08 21:56:46 PDT
Fix compilation with MTLSHAREDEVENT_FOR_XR_FRAME_COMPLETION enabled
Comment 1 Radar WebKit Bug Importer 2023-08-08 21:56:53 PDT
<rdar://problem/113608823>
Comment 2 Dan Glastonbury 2023-08-08 22:42:28 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16514
Comment 3 EWS 2023-08-09 00:55:45 PDT
Committed 266718@main (2d4c384f00d9): <https://commits.webkit.org/266718@main>

Reviewed commits have been landed. Closing PR #16514 and removing active labels.