[WebXR] Build fix WebXROpaqueFramebuffer completion event https://bugs.webkit.org/show_bug.cgi?id=259965 rdar://113608823

Unreviewed build fix, to be reviewed by Matt Woodrow.

Explicit copying completion sync event is required.

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::WebXROpaqueFramebuffer::startFrame):

Canonical link: https://commits.webkit.org/266718@main